// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton for business themes renders styles correctly 1`] = `
.c5 + .c1 {
  margin-left: 15px;
}

.c6 + .c1 {
  margin-left: 16px;
}

.c7 + .c1 {
  margin-left: 16px;
}

.c8 + .c1 {
  margin-left: 16px;
}

.c9 + .c1 {
  margin-left: 16px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2:focus {
  outline: solid 3px #FFB500;
}

.c2 + .c1 {
  margin-left: 16px;
}

.c2:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c2 .carbon-icon {
  margin-left: 0px;
  margin-right: 8px;
}

.c10 > .c1 {
  margin: 0;
}

.c10 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c10 > .c1:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c0 > .c1 {
  margin: 0;
}

.c0 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c11 + .c3 {
  margin-left: 15px;
}

.c1 + .c11 {
  margin-left: 0;
}

.c1 + .c11:focus {
  margin-left: -3px;
}

.c1 + .c11 .carbon-icon {
  margin-left: 0;
}

.c11.c11,
.c1 + .c11:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c12 + .c3 {
  margin-left: 15px;
}

.c1 + .c12 {
  margin-left: 0;
}

.c1 + .c12:focus {
  margin-left: -3px;
}

.c1 + .c12 .carbon-icon {
  margin-left: 0;
}

.c12.c12,
.c1 + .c12:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c13 + .c3 {
  margin-left: 16px;
}

.c1 + .c13 {
  margin-left: 0;
}

.c1 + .c13:focus {
  margin-left: -3px;
}

.c1 + .c13 .carbon-icon {
  margin-left: 0;
}

.c14 + .c3 {
  margin-left: 16px;
}

.c1 + .c14 {
  margin-left: 0;
}

.c1 + .c14:focus {
  margin-left: -3px;
}

.c1 + .c14 .carbon-icon {
  margin-left: 0;
}

.c15 + .c3 {
  margin-left: 16px;
}

.c1 + .c15 {
  margin-left: 0;
}

.c1 + .c15:focus {
  margin-left: -3px;
}

.c1 + .c15 .carbon-icon {
  margin-left: 0;
}

.c16 + .c3 {
  margin-left: 16px;
}

.c1 + .c16 {
  margin-left: 0;
}

.c1 + .c16:focus {
  margin-left: -3px;
}

.c1 + .c16 .carbon-icon {
  margin-left: 0;
}

.c17 + .c3 {
  margin-left: 16px;
}

.c1 + .c17 {
  margin-left: 0;
}

.c1 + .c17:focus {
  margin-left: -3px;
}

.c1 + .c17 .carbon-icon {
  margin-left: 0;
}

.c18 + .c3 {
  margin-left: 16px;
}

.c1 + .c18 {
  margin-left: 0;
}

.c1 + .c18:focus {
  margin-left: -3px;
}

.c1 + .c18 .carbon-icon {
  margin-left: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
  border-left-width: 0;
  padding: 0 10px;
}

.c4:focus {
  outline: solid 3px #FFB500;
}

.c4 + .c3 {
  margin-left: 16px;
}

.c4:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c4 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c4 {
  margin-left: 0;
}

.c1 + .c4:focus {
  margin-left: -3px;
}

.c1 + .c4 .carbon-icon {
  margin-left: 0;
}

.c19 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c19 .c1:focus,
.c19 .c1:hover {
  background-color: #003F2E;
}

.c19 .c1 + .c23 .c1 {
  margin-top: 3px;
}

.c19 .c1 {
  background-color: #1e499f;
  border: 1px solid #1e499f;
  color: #FFF;
  height: 31px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 18px;
}

.c19 .c1:focus,
.c19 .c1:hover {
  background-color: #163777;
}

.c20 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c20 .c1:focus,
.c20 .c1:hover {
  background-color: #003F2E;
}

.c20 .c1 + .c23 .c1 {
  margin-top: 3px;
}

.c21 .c1 {
  background-color: #005B9A;
  border: 1px solid #005B9A;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c21 .c1:focus,
.c21 .c1:hover {
  background-color: #004372;
}

.c21 .c1 + .c23 .c1 {
  margin-top: 3px;
}

.c22 .c1 {
  background-color: #4F2775;
  border: 1px solid #4F2775;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c22 .c1:focus,
.c22 .c1:hover {
  background-color: #3D1E5B;
}

.c22 .c1 + .c23 .c1 {
  margin-top: 3px;
}

<div
  aria-haspopup="true"
  className="c0"
  data-component="split-button"
  data-element="bar"
  data-role="baz"
  onMouseLeave={[Function]}
>
  <button
    className="c1 c2"
    data-component="button"
    data-element="main-button"
    disabled={false}
    id="guid-12345"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
  >
    <span>
      <span
        data-element="main-text"
      >
        Split button
      </span>
    </span>
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show more"
    className="c1 c3 c4"
    data-element="toggle-button"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    size="medium"
  >
    <span
      className="carbon-icon icon-dropdown"
      data-component="icon"
      data-element="dropdown"
    />
  </button>
</div>
`;

exports[`SplitButton for the classic theme renders styles correctly 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c2:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c2:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c2 + .c1 {
  margin-left: 15px;
}

.c2 .carbon-icon {
  margin-left: 0px;
  margin-right: 8px;
}

.c5 + .c1 {
  margin-left: 16px;
}

.c6 + .c1 {
  margin-left: 16px;
}

.c7 + .c1 {
  margin-left: 16px;
}

.c8 + .c1 {
  margin-left: 16px;
}

.c9 + .c1 {
  margin-left: 16px;
}

.c10 + .c1 {
  margin-left: 16px;
}

.c11 + .c1 {
  margin-left: 16px;
}

.c12 + .c1 {
  margin-left: 16px;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c0 > .c1 {
  margin: 0;
}

.c0 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c0 > .c1:focus {
  border: 1px solid #1e499f;
  margin: 0;
}

.c13 > .c1 {
  margin: 0;
}

.c13 > .c1:focus {
  border: 3px solid #FFB500;
  outline: none;
  margin: -1px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
  border-radius: 0;
  font-size: 14px;
  height: 31px;
  line-height: 16px;
  margin-left: 0;
  margin-right: 0;
  padding: 0 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-left-width: 0;
  padding: 0 10px;
  z-index: 20;
}

.c4:active {
  background-color: #1963f6;
  border-color: #1963f6;
  color: #ffffff;
}

.c4:hover {
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border-color: #1e499f;
  color: #ffffff;
}

.c4 + .c3 {
  margin-left: 15px;
}

.c4 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c1 + .c4 {
  margin-left: 0;
}

.c1 + .c4:focus {
  margin-left: -3px;
}

.c1 + .c4 .carbon-icon {
  margin-left: 0;
}

.c4.c4,
.c1 + .c4:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c14 + .c3 {
  margin-left: 15px;
}

.c1 + .c14 {
  margin-left: 0;
}

.c1 + .c14:focus {
  margin-left: -3px;
}

.c1 + .c14 .carbon-icon {
  margin-left: 0;
}

.c14.c14,
.c1 + .c14:focus {
  margin-left: 0;
  padding: 0 5px;
}

.c15 + .c3 {
  margin-left: 16px;
}

.c1 + .c15 {
  margin-left: 0;
}

.c1 + .c15:focus {
  margin-left: -3px;
}

.c1 + .c15 .carbon-icon {
  margin-left: 0;
}

.c16 + .c3 {
  margin-left: 16px;
}

.c1 + .c16 {
  margin-left: 0;
}

.c1 + .c16:focus {
  margin-left: -3px;
}

.c1 + .c16 .carbon-icon {
  margin-left: 0;
}

.c17 + .c3 {
  margin-left: 16px;
}

.c1 + .c17 {
  margin-left: 0;
}

.c1 + .c17:focus {
  margin-left: -3px;
}

.c1 + .c17 .carbon-icon {
  margin-left: 0;
}

.c18 + .c3 {
  margin-left: 16px;
}

.c1 + .c18 {
  margin-left: 0;
}

.c1 + .c18:focus {
  margin-left: -3px;
}

.c1 + .c18 .carbon-icon {
  margin-left: 0;
}

.c19 + .c3 {
  margin-left: 16px;
}

.c1 + .c19 {
  margin-left: 0;
}

.c1 + .c19:focus {
  margin-left: -3px;
}

.c1 + .c19 .carbon-icon {
  margin-left: 0;
}

.c20 + .c3 {
  margin-left: 16px;
}

.c1 + .c20 {
  margin-left: 0;
}

.c1 + .c20:focus {
  margin-left: -3px;
}

.c1 + .c20 .carbon-icon {
  margin-left: 0;
}

.c21 + .c3 {
  margin-left: 16px;
}

.c1 + .c21 {
  margin-left: 0;
}

.c1 + .c21:focus {
  margin-left: -3px;
}

.c1 + .c21 .carbon-icon {
  margin-left: 0;
}

.c22 + .c3 {
  margin-left: 16px;
}

.c1 + .c22 {
  margin-left: 0;
}

.c1 + .c22 .carbon-icon {
  margin-left: 0;
}

.c23 + .c3 {
  margin-left: 16px;
}

.c1 + .c23 {
  margin-left: 0;
}

.c1 + .c23 .carbon-icon {
  margin-left: 0;
}

.c24 + .c3 {
  margin-left: 16px;
}

.c1 + .c24 {
  margin-left: 0;
}

.c1 + .c24 .carbon-icon {
  margin-left: 0;
}

.c25 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c25 .c1:focus,
.c25 .c1:hover {
  background-color: #003F2E;
}

.c25 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c25 .c1 {
  background-color: #1e499f;
  border: 1px solid #1e499f;
  color: #FFF;
  height: 31px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 0 18px;
}

.c25 .c1:focus,
.c25 .c1:hover {
  background-color: #163777;
}

.c26 .c1 {
  background-color: #006045;
  border: 1px solid #006045;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c26 .c1:focus,
.c26 .c1:hover {
  background-color: #003F2E;
}

.c26 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c27 .c1 {
  background-color: #005B9A;
  border: 1px solid #005B9A;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c27 .c1:focus,
.c27 .c1:hover {
  background-color: #004372;
}

.c27 .c1 + .c29 .c1 {
  margin-top: 3px;
}

.c28 .c1 {
  background-color: #4F2775;
  border: 1px solid #4F2775;
  color: #FFFFFF;
  display: block;
  margin-left: 0;
  margin-top: 3px;
  margin-bottom: 3px;
  min-width: 100%;
  text-align: left;
  z-index: 10;
}

.c28 .c1:focus,
.c28 .c1:hover {
  background-color: #3D1E5B;
}

.c28 .c1 + .c29 .c1 {
  margin-top: 3px;
}

<div
  aria-haspopup="true"
  className="c0"
  data-component="split-button"
  data-element="bar"
  data-role="baz"
  onMouseLeave={[Function]}
>
  <button
    className="c1 c2"
    data-component="button"
    data-element="main-button"
    disabled={false}
    id="guid-12345"
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
  >
    <span>
      <span
        data-element="main-text"
      >
        Split button
      </span>
    </span>
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Show more"
    className="c1 c3 c4"
    data-element="toggle-button"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
    size="medium"
  >
    <span
      className="carbon-icon icon-dropdown"
      data-component="icon"
      data-element="dropdown"
    />
  </button>
</div>
`;
